Completed scripts and added models

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,5 @@
 ---
 title: "Elevated UV radiation suppresses induced morphological defenses in *Daphnia pulex*"
-subtitle: Franceen Eshun-Wilson, Raoul Wolf, Erik Sperfeld, Tom Andersen and Dag Olav Hessen
 output: github_document
 ---
 
@@ -8,6 +7,11 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-This repository contains the raw data and R scripts for "Elevated UV radiation suppresses induced morphological defenses in *Daphnia pulex*" by Eshun-Wilson *et al.*
+This repository contains the raw data and R scripts for "Elevated UV radiation suppresses induced morphological defenses in *Daphnia pulex*" by Eshun-Wilson *et al.*, 2020. A link to the final version of the article will be added here in the future. 
 
-The `data` folder contains the raw data used for the anaylses, and the `scripts` folder contains the R scripts which were written for the analyses. 
+The `data` folder contains the raw data used for the anaylses, and the `scripts` folder contains the R scripts which were written for the analyses. The fitted models are in the `models` folder. 
+
+The following R packages need to be installed to run the analysis:
+```{r,eval=FALSE}
+install.packages(c("tidyverse", "brms"))
+```
