Slimming down dependencies and adding reduced models to the inducible defense models

--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ This repository contains the raw data and R scripts for "Elevated UV radiation s
 
 The `data` folder contains the raw data used for the anaylses, and the `scripts` folder contains the R scripts which were written for the analyses. The fitted models are in the `models` folder. 
 
-The following R packages need to be installed to run the analysis:
+The following R package needs to be installed to run the analysis:
 ```{r,eval=FALSE}
-install.packages(c("tidyverse", "brms"))
+install.packages("brms")
 ```
